feat : related-stock-btn 보강

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -10,8 +10,8 @@ html {
   --custom-orange-4: #ffe0d0;
   --custom-purple-1: #a68aff;
   --custom-purple-2: #bfa0ff;
-  --custom-purple-3: #010101;
-  --custom-purple-4: #e0d0ff;
+  --custom-purple-3: #d4c1ff;
+  --custom-purple-4: #ebe6ff;
   --custom-yellow-1: #fcd853;
   --custom-yellow-2: #ffe68a;
   --custom-yellow-3: #fff1a1;
