feat : login을 위한 Section 크기 변화 기능 구현

--- a/frontend/src/fonts/Font.css
+++ b/frontend/src/fonts/Font.css
@@ -145,3 +145,10 @@
   font-weight: 900;
   src: url("./Roboto-BlackItalic.ttf");
 }
+
+@font-face {
+  font-family: "ITC Benguiat Gothic Std";
+  font-style: normal;
+  font-weight: bold;
+  src: url("./BenguiatGothicStd-Bold.otf") format("opentype");
+}
